alignment of buff flags fix #38

--- a/client/Components/GameBoard/Card.scss
+++ b/client/Components/GameBoard/Card.scss
@@ -290,19 +290,20 @@
     }
 }
 
-.attack {
-    background-color: rgba(255, 0, 0, 0.9);
-}
-
 .flag {
     z-index: 10;
     padding: 0;
     text-align: center;  
-    line-height: 22px;
-    font-size: 12px;
-    margin-left: 3px;
-    height: 22px;
-    width: 22px;
+    line-height: 20px;
+    font-size: 11px;
+    height: 20px;
+    width: 20px;
+}
+
+.attack {
+    background-color: rgba(255, 0, 0, 0.9);
+    position: absolute;
+    left: 2px;
 }
 
 .life { 
@@ -311,6 +312,8 @@
 
 .recover { 
     background-color: rgba(0, 0, 201, 0.9);
+    position: absolute;
+    right: 2px;
 }
 
 .spellfocus { 
@@ -328,5 +331,6 @@
     bottom: -2px;
     height:28px;
     display:flex;
+    justify-content: center;
     width:100%;
 }
